--- a/index.html
+++ b/index.html
@@ -1,135 +1,178 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="es-ES">
 
-    <meta charset="UTF-8"> <!-- Define la codificación de caracteres -->
-    <meta name="description" content="Descripción de la página"> <!-- Descripción de la página -->
-    <meta name="keywords" content="palabras, clave, para, SEO"> <!-- Palabras clave para motores de búsqueda -->
-    <meta name="author" content="Nombre del autor"> <!-- Autor de la página -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
+	<head>
+		<meta charset="UTF-8"> <!-- Define la codificación de caracteres -->
+		<meta name="description" content="Descripción de la página"> <!-- Descripción de la página -->
+		<meta name="keywords" content="palabras, clave, para, SEO"> <!-- Palabras clave para motores de búsqueda -->
+		<meta name="author" content="Nombre del autor"> <!-- Autor de la página -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
 
-    <title>Iker Karkokli | Software Developer</title>
+		<title>Index</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="general-styles.css">
-    <link rel="stylesheet" href="nav-styles.css">
-    <link rel="stylesheet" href="container-styles.css">
-    <link rel="stylesheet" href="animations.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&display=swap" rel="stylesheet">
 
-</head>
+		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="header.css">
+		<link rel="stylesheet" href="hero.css">
+		<link rel="stylesheet" href="gallery.css">
+	</head>
 
-<body id="body">
+	<body>
 
-    <!-- Encabezado -->
-    <header>
-        <nav id="navigation">
-            <ul>
-                <li><a href="index.html">Karko</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+		<header id="header">
+			<nav>
+				<ul class="header-list">
+					<li class="header-list-item"><a href="index.html">KARKO</a></li>
+					<li class="header-list-item"><a href="Formulario/formulario.html">FORMULARIO</a></li>
+					<li class="header-list-item"><a href="https://iturriker.github.io/portfolio">PORTFOLIO</a></li>
+					<li class="header-list-item"><a href="Projects/projects.html">PROJECTS</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <!-- Sección de main -->
-    <section id="intro">
-        <h1 id="title">IKER KARKOKLI</h1>
-        <h2 id="paragraph">Currently working on MOTH TACTICS</h2>
-    </section>
+		<main>
+			<section id="hero-section">
+				<div class="hero-container-video">
+					<video class="hero-video" autoplay playsinline loop muted src="Videos/hierba.mp4" type="video/mp4"></video>
+				</div>
+				<div class="hero-container-title">
+					<h1 class="hero-title">IKER KARKOKLI</h1>
+					<h2 class="hero-title">SOFTWARE DEVELOPER</h2>
+				</div>
+			</section>
 
-    <!-- Sección de navegación -->
-    <nav id="navigation">
-        <ul>
-            <li><a href="#about">WHO I AM</a></li>
-            <li><a href="#skills">WHAT I DO</a></li>
-            <li><a href="#needs">WHAT I WANT</a></li>
-            <li><a href="#likes">WHAT I LIKE</a></li>
-        </ul>
-    </nav>
+			<nav>
+				<ul class="link-list">
+					<li class="link-list-item"><a href="#about">WHO I AM</a></li>
+					<li class="link-list-item"><a href="#skills">WHAT I DO</a></li>
+					<li class="link-list-item"><a href="#needs">WHAT I WANT</a></li>
+					<li class="link-list-item"><a href="#likes">WHAT I LIKE</a></li>
+				</ul>
+			</nav>
 
-    <!-- Sección de introducción -->
-    <section id="about">
-        <div class="set">
-            <h2>WHO I AM</h2>
-            <p>Above all, a lover of life; beneath that, an enthusiast, good companion, and source of inspiration who seeks to make the most of every minute.
-                Passionate about creating innovative projects and continuously improving my skills.
-                I'm currently in a personal project to improve my data analist and game developing knowledge.</p>
-        </div>
-        <div class="set">
-            <div class="list">
-                <h3>SOFTWARE DEVELOPMENT</h3>
-                <ul>
-                    <li><strong>Web Development</strong></li>
-                    <li><strong>Game Development</strong></li>
-                    <li><strong>VBA Tools Development</strong></li>
-                </ul>
-            </div>
-            <div class="list">
-                <h3>BUSINESS MANAGEMENT</h3>
-                <ul>
-                    <li><strong>Improving Business Processes</strong></li>
-                    <li><strong>Data Extraction</strong></li>
-                    <li><strong>KPI Representation</strong></li>
-                </ul>
-            </div>
-        </div>
-    </section>
+            <section id="about">
+                <div class="set">
+                    <h2>WHO I AM</h2>
+                    <p>Above all, a lover of life; beneath that, an enthusiast, good companion, and source of inspiration who seeks to make the most of every minute.
+                        Passionate about creating innovative projects and continuously improving my skills.
+                        I'm currently in a personal project to improve my data analist and game developing knowledge.</p>
+                </div>
+                <div class="set">
+                    <div class="list">
+                        <h3>SOFTWARE DEVELOPMENT</h3>
+                        <ul>
+                            <li><strong>Web Development</strong></li>
+                            <li><strong>Game Development</strong></li>
+                            <li><strong>VBA Tools Development</strong></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <h3>BUSINESS MANAGEMENT</h3>
+                        <ul>
+                            <li><strong>Improving Business Processes</strong></li>
+                            <li><strong>Data Extraction</strong></li>
+                            <li><strong>KPI Representation</strong></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
-    <!-- Sección de habilidades -->
-    <section id="skills">
-        <div class="set">
-            <h2>WHAT I DO</h2>
-            <ul>
-                <li><strong>IMPROVE:</strong> I try to improve almost everything around me. I have a problem-solving approach and business mindset.
-                    From corporate culture to software programs, my dedication is focused on making everything run more smoothly.</li>
-                <li><strong>RELATIONS:</strong> Building relationships with clients, suppliers, coworkers, investors.
-                    Throughout my life, I have developed a proactive and outgoing attitude that allows me to speak and persuade with ease, enabling me to create strong connections with people.</li>
-                <li><strong>EXPLORE:</strong> Challenges are the fuel that makes me enjoy life. I like to take risks, and I don't stop until I achieve what I set out to do.
-                    If something is unfamiliar to me, I study it until I become an expert.</li>
-            </ul>
-        </div>
-    </section>
+            <section id="skills">
+                <div class="set">
+                    <h2>WHAT I DO</h2>
+                    <ul>
+                        <li><strong>IMPROVE:</strong> I try to improve almost everything around me. I have a problem-solving approach and business mindset.
+                            From corporate culture to software programs, my dedication is focused on making everything run more smoothly.</li>
+                        <li><strong>RELATIONS:</strong> Building relationships with clients, suppliers, coworkers, investors.
+                            Throughout my life, I have developed a proactive and outgoing attitude that allows me to speak and persuade with ease, enabling me to create strong connections with people.</li>
+                        <li><strong>EXPLORE:</strong> Challenges are the fuel that makes me enjoy life. I like to take risks, and I don't stop until I achieve what I set out to do.
+                            If something is unfamiliar to me, I study it until I become an expert.</li>
+                    </ul>
+                </div>
+            </section>
 
-    <!-- Sección de extras -->
-    <section id="needs">
-        <div class="set">
-            <h2>WHAT I WANT</h2>
-            <ul>
-                <li><strong>HELPING OTHERS:</strong> My goal in life is to help people live better, which is why I believe every action counts.
-                    I strive to amplify everyone's aura, helping them reach their full potential. I also try to bring smiles to those who find it hard to express them and offer advice and encouragement to those in need.
-                    Although I've only volunteered once, it was an experience I'd like to repeat.</li>
-                <li><strong>BETTER WORLD:</strong> I don't know everything, but I am aware of some issues, including animal exploitation, which I strongly oppose.
-                    I'm also against fast fashion and unsustainable practices by both companies and individuals.
-                    I believe there's only one world, every living being matters, and it's everyone's duty to care for it and take responsibility.</li>
-                <li><strong>SELF IMPROVEMENT:</strong> I try to improve every day because, just as I bring out the best in others, I also expect the best from myself.
-                    I usually practice introspection to analyze myself and identify my weaknesses, then apply small habits that form the pillars of who I am today.</li>
-            </ul>
-        </div>
-    </section>
+            <section id="needs">
+                <div class="set">
+                    <h2>WHAT I WANT</h2>
+                    <ul>
+                        <li><strong>HELPING OTHERS:</strong> My goal in life is to help people live better, which is why I believe every action counts.
+                            I strive to amplify everyone's aura, helping them reach their full potential. I also try to bring smiles to those who find it hard to express them and offer advice and encouragement to those in need.
+                            Although I've only volunteered once, it was an experience I'd like to repeat.</li>
+                        <li><strong>BETTER WORLD:</strong> I don't know everything, but I am aware of some issues, including animal exploitation, which I strongly oppose.
+                            I'm also against fast fashion and unsustainable practices by both companies and individuals.
+                            I believe there's only one world, every living being matters, and it's everyone's duty to care for it and take responsibility.</li>
+                        <li><strong>SELF IMPROVEMENT:</strong> I try to improve every day because, just as I bring out the best in others, I also expect the best from myself.
+                            I usually practice introspection to analyze myself and identify my weaknesses, then apply small habits that form the pillars of who I am today.</li>
+                    </ul>
+                </div>
+            </section>
 
-    <!-- Sección de pasiones -->
-    <section id="likes">
-        <div class="set">
-            <h2>WHAT I LIKE</h2>
-            <ul>
-                <li><strong>SPORTS:</strong> I love sports. I have practiced rugby, soccer, CrossFit, kickboxing, hiking, climbing, swimming, and weightlifting.
-                    I use sports as a way to stay fit and clear my mind.</li>
-                <li><strong>VIDEO GAMES:</strong> Video game enthusiast, especially when playing with friends. I enjoy the endless possibilities they offer.
-                    My favorite games are strategy-based; I enjoy analyzing situations and calculating potential outcomes.</li>
-                <li><strong>NATURE:</strong> Fan of the colors and scents of life. I love animals and the wind.
-                    I enjoy standing under a tree to reflect on my thoughts, and hear the sound of the rain.</li>
-                <li><strong>TRAVEL:</strong> When life allows, I enjoy long-distance hiking, which helps me reset my thoughts and clear my mind while connecting with the humility of existence.</li>
-            </ul>
-        </div>
-    </section>
+            <section id="likes">
+                <div class="set">
+                    <h2>WHAT I LIKE</h2>
+                    <ul>
+                        <li><strong>SPORTS:</strong> I love sports. I have practiced rugby, soccer, CrossFit, kickboxing, hiking, climbing, swimming, and weightlifting.
+                            I use sports as a way to stay fit and clear my mind.</li>
+                        <li><strong>VIDEO GAMES:</strong> Video game enthusiast, especially when playing with friends. I enjoy the endless possibilities they offer.
+                            My favorite games are strategy-based; I enjoy analyzing situations and calculating potential outcomes.</li>
+                        <li><strong>NATURE:</strong> Fan of the colors and scents of life. I love animals and the wind.
+                            I enjoy standing under a tree to reflect on my thoughts, and hear the sound of the rain.</li>
+                        <li><strong>TRAVEL:</strong> When life allows, I enjoy long-distance hiking, which helps me reset my thoughts and clear my mind while connecting with the humility of existence.</li>
+                    </ul>
+                </div>
+            </section>
 
-    <!-- Sección de pie de página -->
-    <footer>
-        <p>&copy; <span id="year"></span> Iker Karkokli. All Rights Reserved.</p>
-    </footer>
+			<section id="image-gallery">
+				<div class="image-gallery-container">
+					<figure class="image-gallery-item">
+						<img src="Imagenes/Pajaros/1.jpg" alt="">
+					</figure>
+					<figure class="image-gallery-item">
+						<img src="Imagenes/Pajaros/2.jpg" alt="">
+					</figure>
+					<figure class="image-gallery-item">
+						<img src="Imagenes/Pajaros/3.jpg" alt="">
+					</figure>
+					<figure class="image-gallery-item">
+						<img src="Imagenes/Pajaros/4.jpg" alt="">
+					</figure>
+					<figure class="image-gallery-item">
+						<img src="Imagenes/Pajaros/5.jpg" alt="">
+					</figure>
+					<figure class="image-gallery-item">
+						<img src="Imagenes/Pajaros/6.jpg" alt="">
+					</figure>
+				</div>
+				<nav class="image-gallery-navigation">
+					<button class="nav-button prev-button"><span>&#60;</span></button>
+					<button class="nav-button next-button"><span>&#62;</span></button>
+				</nav>
+			</section>
 
-    <script src="functions.js"></script>
+			<section id="video-gallery">
+				<video controls><source src="Videos/hierba.mp4" type="video/mp4"></video>
+			</section>
+		</main>
 
-</body>
+		<footer>
+			<div>
+				<ul class="social-list">
+					<li class="social-list-item"><a href="https://es-es.facebook.com"><img src="Logos/facebook.png" alt="Enlace a Facebook"></a></li>
+					<li class="social-list-item"><a href="https://www.instagram.com"><img src="Logos/instagram.png" alt="Enlace a Instagram"></a></li>
+					<li class="social-list-item"><a href="https://www.youtube.com"><img src="Logos/youtube.png" alt="Enlace aYoutube"></a></li>
+				</ul>
+			</div>
+			
+			<div>
+				<p>&copy; <span id="year"></span> Iker Karkokli. All Rights Reserved.</p>
+			</div>
+		</footer>
+	
+		<script src="index.js"></script>
+
+	</body>
+
 </html>
