--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<main>
 			<section id="hero-section">
 				<div class="hero-container-video">
-					<video class="hero-video" autoplay playsinline loop muted src="Videos/hierba.mp4" type="video/mp4"></video>
+					<video class="hero-video" autoplay playsinline loop muted src="Videos/Hierba.mp4" type="video/mp4"></video>
 				</div>
 				<div class="hero-container-title">
 					<h1 class="hero-title">IKER KARKOKLI</h1>
@@ -153,7 +153,7 @@
 			</section>
 
 			<section id="video-gallery">
-				<video controls><source src="Videos/hierba.mp4" type="video/mp4"></video>
+				<video controls><source src="Videos/Hierba.mp4" type="video/mp4"></video>
 			</section>
 		</main>
 
