--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es-ES">
-
 	<head>
 		<meta charset="UTF-8"> <!-- Define la codificación de caracteres -->
 		<meta name="description" content="Descripción de la página"> <!-- Descripción de la página -->
@@ -8,27 +7,28 @@
 		<meta name="author" content="Nombre del autor"> <!-- Autor de la página -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
 
-		<title>Index</title>
+		<title>Iker Karkokli | Portfolio</title>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" href="header.css">
 		<link rel="stylesheet" href="hero.css">
 		<link rel="stylesheet" href="gallery.css">
+		<link rel="stylesheet" href="footer.css">
 	</head>
 
 	<body>
-
 		<header id="header">
 			<nav>
 				<ul class="header-list">
 					<li class="header-list-item"><a href="index.html">KARKO</a></li>
-					<li class="header-list-item"><a href="Formulario/formulario.html">FORMULARIO</a></li>
-					<li class="header-list-item"><a href="https://iturriker.github.io/portfolio">PORTFOLIO</a></li>
 					<li class="header-list-item"><a href="Projects/projects.html">PROJECTS</a></li>
+					<li class="header-list-item"><a href="Formulario/formulario.html">FORMULARIO</a></li>
+					<li class="header-list-item"><a href="https://iturriker.github.io/portfolio" target="_blank" rel="noopener noreferrer">WEB PORTFOLIO</a></li>
+					<li class="header-list-item"><a href="http://www.antxoa-dev.com/curso" target="_blank" rel="noopener noreferrer">ANTXOA DEV</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -38,89 +38,89 @@
 				<div class="hero-container-video">
 					<video class="hero-video" autoplay playsinline loop muted src="Videos/Hierba.mp4" type="video/mp4"></video>
 				</div>
-				<div class="hero-container-title">
-					<h1 class="hero-title">IKER KARKOKLI</h1>
-					<h2 class="hero-title">SOFTWARE DEVELOPER</h2>
+				<div class="hero-container-text">
+					<h1 class="hero-text hero-title">IKER KARKOKLI</h1>
+					<h2 class="hero-text hero-subtitle">BUSINESS MANAGEMENT & SOFTWARE DEVELOPER</h2>
 				</div>
 			</section>
 
 			<nav>
 				<ul class="link-list">
-					<li class="link-list-item"><a href="#about">WHO I AM</a></li>
-					<li class="link-list-item"><a href="#skills">WHAT I DO</a></li>
-					<li class="link-list-item"><a href="#needs">WHAT I WANT</a></li>
-					<li class="link-list-item"><a href="#likes">WHAT I LIKE</a></li>
+					<li class="link-list-item"><a href="#about-section">WHO I AM</a></li>
+					<li class="link-list-item"><a href="#skills-section">WHAT I DO</a></li>
+					<li class="link-list-item"><a href="#needs-section">WHAT I WANT</a></li>
+					<li class="link-list-item"><a href="#likes-section">WHAT I LIKE</a></li>
 				</ul>
 			</nav>
 
-            <section id="about">
-                <div class="set">
-                    <h2>WHO I AM</h2>
+            <section id="about-section" class="info-section">
+                <div class="section-container-text">
+                    <h2><a class ="section-title" href="#hero-section">WHO I AM</a></h2>
                     <p>Above all, a lover of life; beneath that, an enthusiast, good companion, and source of inspiration who seeks to make the most of every minute.
                         Passionate about creating innovative projects and continuously improving my skills.
                         I'm currently in a personal project to improve my data analist and game developing knowledge.</p>
                 </div>
-                <div class="set">
-                    <div class="list">
-                        <h3>SOFTWARE DEVELOPMENT</h3>
-                        <ul>
-                            <li><strong>Web Development</strong></li>
-                            <li><strong>Game Development</strong></li>
-                            <li><strong>VBA Tools Development</strong></li>
+                <div class="section-container-text-special">
+					<div class="section-container-list">
+                        <h3>BUSINESS MANAGEMENT</h3>
+                        <ul class="section-text-list">
+                            <li class="text-list-item"><strong>Business Process Improvement</strong></li>
+                            <li class="text-list-item"><strong>Business Intelligence Analyst</strong></li>
+                            <li class="text-list-item"><strong>Project Management</strong></li>
                         </ul>
                     </div>
-                    <div class="list">
-                        <h3>BUSINESS MANAGEMENT</h3>
-                        <ul>
-                            <li><strong>Improving Business Processes</strong></li>
-                            <li><strong>Data Extraction</strong></li>
-                            <li><strong>KPI Representation</strong></li>
+                    <div class="section-container-list">
+                        <h3>SOFTWARE DEVELOPMENT</h3>
+                        <ul class="section-text-list">
+                            <li class="text-list-item"><strong>Front-End Web Development</strong></li>
+                            <li class="text-list-item"><strong>VideoGame Development</strong></li>
+                            <li class="text-list-item"><strong>VBA Tools Development</strong></li>
                         </ul>
                     </div>
                 </div>
             </section>
 
-            <section id="skills">
-                <div class="set">
-                    <h2>WHAT I DO</h2>
-                    <ul>
-                        <li><strong>IMPROVE:</strong> I try to improve almost everything around me. I have a problem-solving approach and business mindset.
+            <section id="skills-section"  class="info-section">
+                <div class="section-container-text">
+					<h2><a class ="section-title" href="#hero-section">WHAT I DO</a></h2>
+                    <ul class="section-text-list">
+                        <li class="text-list-item"><strong>IMPROVE:</strong> I try to improve almost everything around me. I have a problem-solving approach and business mindset.
                             From corporate culture to software programs, my dedication is focused on making everything run more smoothly.</li>
-                        <li><strong>RELATIONS:</strong> Building relationships with clients, suppliers, coworkers, investors.
+                        <li class="text-list-item"><strong>RELATIONS:</strong> Building relationships with clients, suppliers, coworkers, investors.
                             Throughout my life, I have developed a proactive and outgoing attitude that allows me to speak and persuade with ease, enabling me to create strong connections with people.</li>
-                        <li><strong>EXPLORE:</strong> Challenges are the fuel that makes me enjoy life. I like to take risks, and I don't stop until I achieve what I set out to do.
+                        <li class="text-list-item"><strong>EXPLORE:</strong> Challenges are the fuel that makes me enjoy life. I like to take risks, and I don't stop until I achieve what I set out to do.
                             If something is unfamiliar to me, I study it until I become an expert.</li>
                     </ul>
                 </div>
             </section>
 
-            <section id="needs">
-                <div class="set">
-                    <h2>WHAT I WANT</h2>
-                    <ul>
-                        <li><strong>HELPING OTHERS:</strong> My goal in life is to help people live better, which is why I believe every action counts.
+            <section id="needs-section"  class="info-section">
+                <div class="section-container-text">
+					<h2><a class ="section-title" href="#hero-section">WHAT I WANT</a></h2>
+                    <ul class="section-text-list">
+                        <li class="text-list-item"><strong>HELPING OTHERS:</strong> My goal in life is to help people live better, which is why I believe every action counts.
                             I strive to amplify everyone's aura, helping them reach their full potential. I also try to bring smiles to those who find it hard to express them and offer advice and encouragement to those in need.
                             Although I've only volunteered once, it was an experience I'd like to repeat.</li>
-                        <li><strong>BETTER WORLD:</strong> I don't know everything, but I am aware of some issues, including animal exploitation, which I strongly oppose.
+                        <li class="text-list-item"><strong>BETTER WORLD:</strong> I don't know everything, but I am aware of some issues, including animal exploitation, which I strongly oppose.
                             I'm also against fast fashion and unsustainable practices by both companies and individuals.
                             I believe there's only one world, every living being matters, and it's everyone's duty to care for it and take responsibility.</li>
-                        <li><strong>SELF IMPROVEMENT:</strong> I try to improve every day because, just as I bring out the best in others, I also expect the best from myself.
+                        <li class="text-list-item"><strong>SELF IMPROVEMENT:</strong> I try to improve every day because, just as I bring out the best in others, I also expect the best from myself.
                             I usually practice introspection to analyze myself and identify my weaknesses, then apply small habits that form the pillars of who I am today.</li>
                     </ul>
                 </div>
             </section>
 
-            <section id="likes">
-                <div class="set">
-                    <h2>WHAT I LIKE</h2>
-                    <ul>
-                        <li><strong>SPORTS:</strong> I love sports. I have practiced rugby, soccer, CrossFit, kickboxing, hiking, climbing, swimming, and weightlifting.
+            <section id="likes-section"  class="info-section">
+                <div class="section-container-text">
+					<h2><a class ="section-title" href="#hero-section">WHAT I LIKE</a></h2>
+                    <ul class="section-text-list">
+                        <li class="text-list-item"><strong>SPORTS:</strong> I love sports. I have practiced rugby, soccer, CrossFit, kickboxing, hiking, climbing, swimming, and weightlifting.
                             I use sports as a way to stay fit and clear my mind.</li>
-                        <li><strong>VIDEO GAMES:</strong> Video game enthusiast, especially when playing with friends. I enjoy the endless possibilities they offer.
+                        <li class="text-list-item"><strong>VIDEO GAMES:</strong> Video game enthusiast, especially when playing with friends. I enjoy the endless possibilities they offer.
                             My favorite games are strategy-based; I enjoy analyzing situations and calculating potential outcomes.</li>
-                        <li><strong>NATURE:</strong> Fan of the colors and scents of life. I love animals and the wind.
+                        <li class="text-list-item"><strong>NATURE:</strong> Fan of the colors and scents of life. I love animals and the wind.
                             I enjoy standing under a tree to reflect on my thoughts, and hear the sound of the rain.</li>
-                        <li><strong>TRAVEL:</strong> When life allows, I enjoy long-distance hiking, which helps me reset my thoughts and clear my mind while connecting with the humility of existence.</li>
+                        <li class="text-list-item"><strong>TRAVEL:</strong> When life allows, I enjoy long-distance hiking, which helps me reset my thoughts and clear my mind while connecting with the humility of existence.</li>
                     </ul>
                 </div>
             </section>
@@ -158,13 +158,10 @@
 		</main>
 
 		<footer>
-			<div>
-				<ul class="social-list">
-					<li class="social-list-item"><a href="https://es-es.facebook.com"><img src="Logos/facebook.png" alt="Enlace a Facebook"></a></li>
-					<li class="social-list-item"><a href="https://www.instagram.com"><img src="Logos/instagram.png" alt="Enlace a Instagram"></a></li>
-					<li class="social-list-item"><a href="https://www.youtube.com"><img src="Logos/youtube.png" alt="Enlace aYoutube"></a></li>
-				</ul>
-			</div>
+			<ul class="social-list">
+				<li class="social-list-item"><a href="https://www.linkedin.com/in/iker-karkokli-iturrioz" target="_blank" rel="noopener noreferrer"><img src="Logos/linkedin.png" alt="Enlace a LinkedIn"></a></li>
+				<li class="social-list-item"><a href="https://github.com/iturriker" target="_blank" rel="noopener noreferrer"><img src="Logos/github.png" alt="Enlace a Instagram"></a></li>
+			</ul>
 			
 			<div>
 				<p>&copy; <span id="year"></span> Iker Karkokli. All Rights Reserved.</p>
@@ -172,7 +169,5 @@
 		</footer>
 	
 		<script src="index.js"></script>
-
 	</body>
-
 </html>
