--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -1,68 +1,80 @@
 <!DOCTYPE html>
-<html lang="es-ES">
-
+<html lang="en">
     <head>
-
-        <meta charset="UTF-8"> <!-- Define la codificación de caracteres -->
-        <meta name="description" content="Descripción de la página"> <!-- Descripción de la página -->
-        <meta name="keywords" content="palabras, clave, para, SEO"> <!-- Palabras clave para motores de búsqueda -->
-        <meta name="author" content="Nombre del autor"> <!-- Autor de la página -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
+        <meta charset="UTF-8">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="author" content="Iker Karkokli Iturrioz">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Iker Karkokli | Projects</title>
+        <link rel="icon" href="../Favicon/Oveja.ico">
 
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="projects.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
+		<link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="../header.css">
+        <link rel="stylesheet" href="../hero.css">
+        <link rel="stylesheet" href="../footer.css">
     </head>
 
     <body>
-
-        <header>
-            <nav id="navigation">
-                <ul>
-                    <li><a href="../index.html">Karko</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                </ul>
-            </nav>
-        </header>
+		<header id="header">
+			<nav>
+				<ul class="header-list">
+					<li class="header-list-item"><a href="../index.html">KARKO</a></li>
+					<li class="header-list-item"><a href="projects.html">PROJECTS</a></li>
+				</ul>
+			</nav>
+		</header>
 
         <main>
-            <section id="main">
-                <h1 id="title">PROJECTS</h1>
-                <h2 id="paragraph">Self taught Game Developer currently working on MOTH TACTICS</h2>
-            </section>
+            <section id="hero-section">
+				<div class="hero-container-video">
+					<video class="hero-video" autoplay playsinline loop muted src="../Videos/Hierba.mp4"></video>
+				</div>
+				<div class="hero-container-text">
+					<h1 class="hero-text hero-title">PROJECTS</h1>
+					<h2 class="hero-text hero-subtitle">Self taught Game Developer currently working on MOTH TACTICS</h2>
+				</div>
+			</section>
 
-            <!-- Sección de navegación -->
-            <nav id="navigation">
-                <ul>
-                    <li><a href="#GAMES">GAMES</a></li>
-                    <li><a href="#VR">VR</a></li>
-                    <li><a href="#VBA">VBA</a></li>
-                    <li><a href="#POWER BI">POWER BI</a></li>
+            <nav>
+                <ul class="link-list">
+                    <li class="link-list-item"><a href="#videogames-section">VIDEOGAMES</a></li>
+                    <li class="link-list-item"><a href="#VR-section">VR</a></li>
+                    <li class="link-list-item"><a href="#VBA-section">VBA</a></li>
+                    <li class="link-list-item"><a href="#PowerBI-section">POWER BI</a></li>
                 </ul>
             </nav>
 
-            <!-- Sección de proyectos -->
-            <section id="projects">
-                <h2>Projects</h2>
-                <div id="project 1" class="project">
-                    <h3>The Greatest Composer</h3>
-                    <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
-                    <img src="image.png" alt="Descripción de la imagen">
-                </div>
-                <div id="project 2" class="project">
-                    <h3>Moth Tactics</h3>
-                    <p>Free your world from a moth infestation with your turrets (currently in development).</p>
-                    <img src="image.jpg" alt="Descripción de la imagen">
+            <section id="videogames-section"  class="info-section">
+                <div class="section-container-text">
+					<h2><a class ="section-title" href="#hero-section">VIDEOGAMES</a></h2>
+                    <ul class="section-text-list">
+                        <li class="text-list-item">
+                            <h3>The Greatest Composer</h3>
+                            <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item">
+                            <h3>Moth Tactics</h3>
+                            <p>Free your world from a moth infestation with your turrets (currently in development).</p>
+                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2024 Iker Karkokli. All Rights Reserved.</p>
+            <div>
+				<p>&copy; <span id="year"></span> Iker Karkokli. All Rights Reserved.</p>
+			</div>
         </footer>
 
+        <script src="projects.js"></script>
     </body>
-
 </html>
