Responsive for mobile: flex-wrap:wrap for ul elements. Changed hero and footer width to 100% instead of dvw cause dvw gets the verticall scrollbar too

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"> <!-- Define la codificación de caracteres -->
 		<meta name="description" content="Hi! I am Iker Karkokli, a Business Manager and Software Developer. In this portfolio you will find all my personal info, projects and much more.">
-		<meta name="keywords" content="Iker, Karkokli, Iturrioz, web design, portfolio, responsive, HTML, CSS, JavaScript"> <!-- Palabras clave para motores de búsqueda -->
+		<meta name="keywords" content="iker, karkokli, iturrioz, web design, portfolio, responsive, HTML, CSS, JavaScript"> <!-- Palabras clave para motores de búsqueda -->
 		<meta name="author" content="Iker Karkokli Iturrioz">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
 
