Responsive hero section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</header>
 
 		<main>
-			<section id="hero-section">
+			<section id="hero-section" class="hero-section">
 				<div class="hero-container-video">
 					<video class="hero-video" autoplay playsinline loop muted src="Videos/Hierba.mp4"></video>
 				</div>
@@ -128,7 +128,7 @@
                 </div>
             </section>
 
-			<div id="image-gallery">
+			<div id="image-gallery" class="image-gallery">
 				<div class="image-gallery-container">
 					<figure class="image-gallery-item">
 						<img src="Imagenes/Ovejas/Oveja.jpg" alt="">
@@ -158,7 +158,7 @@
 				</nav>
 			</div>
 
-			<div id="video-gallery">
+			<div id="video-gallery" class="video-gallery">
 				<video controls><source src="Videos/Hierba.mp4" type="video/mp4"></video>
 			</div>
 		</main>
