projects page bug corrected

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -31,7 +31,7 @@
 		</header>
 
         <main>
-            <section id="hero-section">
+            <section id="hero-section" class="hero-section">
 				<div class="hero-container-video">
 					<video class="hero-video" autoplay playsinline loop muted src="../Videos/Hierba.mp4"></video>
 				</div>
@@ -61,7 +61,7 @@
                         </li>
                         <li class="text-list-item">
                             <h3>Moth Tactics</h3>
-                            <p>Free your world from a moth infestation with your turrets (currently in development).</p>
+                            <p>Free your world from a violent moth infestation (currently in development).</p>
                             <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
                         </li>
                     </ul>
@@ -69,11 +69,16 @@
             </section>
         </main>
 
-        <footer>
-            <div>
+		<footer>
+			<ul class="social-list">
+				<li class="social-list-item"><a href="https://www.linkedin.com/in/iker-karkokli-iturrioz" target="_blank" rel="noopener noreferrer"><img src="../Logos/linkedin.png" alt="Link to LinkedIn"></a></li>
+				<li class="social-list-item"><a href="https://github.com/iturriker" target="_blank" rel="noopener noreferrer"><img src="../Logos/github.png" alt="Link to GitHub"></a></li>		
+			</ul>
+			
+			<div>
 				<p>&copy; <span id="year"></span> Iker Karkokli. All Rights Reserved.</p>
 			</div>
-        </footer>
+		</footer>
 
         <script src="projects.js"></script>
     </body>
