projects model gallery updated

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -15,6 +15,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="box-item.css">
         <link rel="stylesheet" href="../header.css">
         <link rel="stylesheet" href="../hero.css">
         <link rel="stylesheet" href="../footer.css">
@@ -37,7 +38,7 @@
 				</div>
 				<div class="hero-container-text">
 					<h1 class="hero-text hero-title">PROJECTS</h1>
-					<h2 class="hero-text hero-subtitle">Self taught Game Developer currently working on MOTH TACTICS</h2>
+					<h2 class="hero-text hero-subtitle">Self taught developer currently learning web development</h2>
 				</div>
 			</section>
 
@@ -53,16 +54,96 @@
             <section id="videogames-section"  class="info-section">
                 <div class="section-container-text">
 					<h2><a class ="section-title" href="#hero-section">VIDEOGAMES</a></h2>
-                    <ul class="section-text-list">
-                        <li class="text-list-item">
-                            <h3>The Greatest Composer</h3>
-                            <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                    <ul class="section-text-list box-list">
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            </div>
                             <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
                         </li>
-                        <li class="text-list-item">
-                            <h3>Moth Tactics</h3>
-                            <p>Free your world from a violent moth infestation (currently in development).</p>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                            </div>
                             <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section id="PowerBI-section"  class="info-section">
+                <div class="section-container-text">
+					<h2><a class ="section-title" href="#hero-section">POWER BI</a></h2>
+                    <ul class="section-text-list box-list">
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
+                        </li>
+                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                        </li>                        <li class="text-list-item box-list-item">
+                            <div>
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            </div>
+                            <img src="../Imagenes/Pajaros/1.jpg" alt="Descripción de la imagen">
                         </li>
                     </ul>
                 </div>
