open graph tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<meta name="author" content="Iker Karkokli Iturrioz">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
 
+		<meta property="og:title" content="Iker Karkokli | Portfolio">
+		<meta property="og:description" content="Hi! I am Iker Karkokli, a Business Manager and Software Developer. In this portfolio you will find all my personal info, projects and much more.">
+		<meta property="og:image" content="https://github.com/iturriker/portfolio/blob/main/Imagenes/Ovejas/Oveja3.jpg"> <!-- Cambia esta URL a la de tu imagen -->
+		<meta property="og:url" content="https://iturriker.github.io/portfolio/">
+		<meta property="og:type" content="website">
+
 		<title>Iker Karkokli | Portfolio</title>
 		<link rel="icon" href="Favicon/Oveja.ico">
 
