--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 		<meta property="og:title" content="Iker Karkokli | Portfolio">
 		<meta property="og:description" content="Hi! I am Iker Karkokli, a Business Manager and Software Developer. In this portfolio you will find all my personal info, projects and much more.">
-		<meta property="og:image" content="https://github.com/iturriker/portfolio/blob/main/Imagenes/Ovejas/Oveja3.jpg"> <!-- Cambia esta URL a la de tu imagen -->
+		<meta property="og:image" content="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Ovejas/Oveja.jpg"> <!-- Cambia esta URL a la de tu imagen -->
 		<meta property="og:url" content="https://iturriker.github.io/portfolio/">
 		<meta property="og:type" content="website">
 
 		<title>Iker Karkokli | Portfolio</title>
-		<link rel="icon" href="Favicon/Oveja.ico">
+		<link rel="icon" href="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Favicon/Oveja.ico">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
