--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:type" content="website">
 
 		<title>Iker Karkokli | Portfolio</title>
-		<link rel="icon" href="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Favicon/Oveja.ico">
+		<link rel="icon" href="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Ovejas/Oveja3.jpg">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
