Deleted favicon, added jpg instead

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <meta name="author" content="Iker Karkokli Iturrioz">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8"> <!-- Define la codificación de caracteres -->
+		<meta name="description" content="Hi! I am Iker Karkokli, a Business Manager and Software Developer. In this portfolio you will find all my personal info, projects and much more.">
+		<meta name="keywords" content="iker, karkokli, iturrioz, web design, portfolio, responsive, HTML, CSS, JavaScript"> <!-- Palabras clave para motores de búsqueda -->
+		<meta name="author" content="Iker Karkokli Iturrioz">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración de vista para dispositivos móviles -->
+
+		<meta property="og:title" content="Iker Karkokli | Portfolio">
+		<meta property="og:description" content="Hi! I am Iker Karkokli, a Business Manager and Software Developer. In this portfolio you will find all my personal info, projects and much more.">
+		<meta property="og:image" content="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Ovejas/Oveja.jpg"> <!-- Cambia esta URL a la de tu imagen -->
+		<meta property="og:url" content="https://iturriker.github.io/portfolio/">
+		<meta property="og:type" content="website">
 
         <title>Iker Karkokli | Projects</title>
-        <link rel="icon" href="../Favicon/Oveja.ico">
+        <link rel="icon" href="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Ovejas/Oveja3.jpg">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
