Deleted Form and projects.js, Added header button to projects

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 				<ul class="header-list">
 					<li class="header-list-item"><a href="index.html">KARKO</a></li>
 					<li class="header-list-item"><a href="Projects/projects.html">PROJECTS</a></li>
-					<li class="header-list-item"><a href="Formulario/formulario.html">FORMULARIO</a></li>
 					<li class="header-list-item"><a href="https://iturriker.github.io/portfolio" target="_blank" rel="noopener noreferrer">WEB PORTFOLIO</a></li>
 					<li class="header-list-item"><a href="http://www.antxoa-dev.com/curso" target="_blank" rel="noopener noreferrer">ANTXOA DEV</a></li>
 				</ul>
 			</nav>
 		</header>
 
-		<button id="header-button" class="header-button" type="button">
+		<button id="header-button" class="header-button hidden" type="button">
 		</button>
 
 		<main>
