--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -37,6 +37,9 @@
 			</nav>
 		</header>
 
+        <button id="header-button" class="header-button hidden" type="button">
+		</button>
+
         <main>
             <section id="hero-section" class="hero-section">
 				<div class="hero-container-video">
@@ -168,6 +171,6 @@
 			</div>
 		</footer>
 
-        <script src="projects.js"></script>
+        <script src="../index.js"></script>
     </body>
 </html>
