removed image gallery, added padding instead of margin in footer, added reset.css, added codepen iframe

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -20,6 +20,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
+        <!--<link rel="stylesheet" href="../reset.css">-->
 		<link rel="stylesheet" href="projects.css">
         <link rel="stylesheet" href="box-item.css">
         <link rel="stylesheet" href="../header.css">
@@ -53,30 +54,33 @@
 
             <nav>
                 <ul class="link-list">
+                    <li class="link-list-item"><a href="#web-section">WEB</a></li>
                     <li class="link-list-item"><a href="#videogames-section">VIDEOGAMES</a></li>
-                    <li class="link-list-item"><a href="#VR-section">VR</a></li>
                     <li class="link-list-item"><a href="#VBA-section">VBA</a></li>
                     <li class="link-list-item"><a href="#PowerBI-section">POWER BI</a></li>
                 </ul>
             </nav>
 
-            <section id="videogames-section"  class="info-section">
+            <section id="web-section"  class="info-section">
                 <div class="section-container-text">
-					<h2><a class ="section-title" href="#hero-section">VIDEOGAMES</a></h2>
+					<h2><a class ="section-title" href="#hero-section">WEB</a></h2>
                     <ul class="section-text-list box-list">
                         <li class="text-list-item box-list-item">
                             <div>
                                 <h3>The Greatest Composer</h3>
                                 <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
                             </div>
-                            <iframe src="https://www.youtube.com/embed/1FgpiRbTahg?si=mfy4AXr7Kgm8ouZ7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0?si=EAaU8BJ5Gv3qmR-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </li>
                         <li class="text-list-item box-list-item">
                             <div>
                                 <h3>Moth Tactics</h3>
                                 <p>Free your world from a violent moth infestation (currently in development).</p>
                             </div>
-                            <img src="../Imagenes/Pajaros/2.jpg" alt="Descripción de la imagen">
+                            <iframe scrolling="no" title="Move the Sun" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/QWepBYE?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                                See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/QWepBYE">
+                                Move the Sun</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
+                                on <a href="https://codepen.io">CodePen</a>.</iframe>
                         </li>
                         <li class="text-list-item box-list-item">
                             <div>
@@ -167,8 +171,8 @@
                 <li class="social-list-item"><a href="http://www.antxoa-dev.com/curso" target="_blank" rel="noopener noreferrer"><img src="../Logos/bird.png" alt="Link to AntxoaDev"></a></li>
             </ul>
 			
-			<div>
-				<p>&copy; <span id="year"></span> Iker Karkokli. MIT Lisence.</p>
+			<div class="license-container">
+				<p class ="license-text">&copy; <span id="year"></span> Iker Karkokli. MIT Lisence.</p>
 			</div>
 		</footer>
 
