--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
+		<!--<link rel="stylesheet" href="reset.css">-->
 		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" href="header.css">
 		<link rel="stylesheet" href="hero.css">
-		<link rel="stylesheet" href="image-gallery.css">
 		<link rel="stylesheet" href="footer.css">
 	</head>
 
@@ -134,41 +134,6 @@
                     </ul>
                 </div>
             </section>
-
-			<div id="image-gallery" class="image-gallery">
-				<div class="image-gallery-container">
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Ovejas/Oveja.jpg" alt="">
-					</figure>
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Pajaros/1.jpg" alt="">
-					</figure>
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Pajaros/2.jpg" alt="">
-					</figure>
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Pajaros/3.jpg" alt="">
-					</figure>
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Pajaros/4.jpg" alt="">
-					</figure>
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Pajaros/5.jpg" alt="">
-					</figure>
-					<figure class="image-gallery-item">
-						<img src="Imagenes/Pajaros/6.jpg" alt="">
-					</figure>
-				</div>
-				<nav class="image-gallery-navigation">
-					<button class="nav-button prev-button"><span>&#60;</span></button>
-					<button class="nav-button next-button"><span>&#62;</span></button>
-				</nav>
-			</div>
-
-			<div id="video-gallery" class="video-gallery">
-				<video controls><source src="Videos/Hierba.mp4" type="video/mp4"></video>
-				<!--<iframe src="" frameborder="0" allowfullscreen></iframe>-->
-			</div>
 		</main>
 
 		<footer>
@@ -179,8 +144,8 @@
 				<li class="social-list-item"><a href="http://www.antxoa-dev.com/curso" target="_blank" rel="noopener noreferrer"><img src="Logos/bird.png" alt="Link to AntxoaDev"></a></li>
 			</ul>
 			
-			<div>
-				<p>&copy; <span id="year"></span> Iker Karkokli. MIT Lisence.</p>
+			<div class="license-container">
+				<p class ="license-text">&copy; <span id="year"></span> Iker Karkokli. MIT Lisence.</p>
 			</div>
 		</footer>
 	
